--- a/Views/Students/Create.cshtml
+++ b/Views/Students/Create.cshtml
@@ -49,6 +49,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.CellPhone,htmlAttributes: new { @class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CellPhone,new { htmlAttributes= new { @class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.CellPhone,"", new { @class = "text-Danger"})
+            </div>
+
+
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
