--- a/Views/Students/Delete.cshtml
+++ b/Views/Students/Delete.cshtml
@@ -44,6 +44,14 @@
             @Html.DisplayFor(model => model.EnrollmentDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CellPhone)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CellPhone)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
