--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -43,6 +43,14 @@
             @Html.DisplayFor(model => model.EnrollmentDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CellPhone)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CellPhone)
+        </dd>
+
     </dl>
 </div>
 <p>
